fix: overflow wrap task name links in home myFeed

--- a/client/components/css/Home.module.css
+++ b/client/components/css/Home.module.css
@@ -77,6 +77,11 @@
   margin-top: 1em;
 }
 
+.listItemTaskName {
+  max-width: 260px;
+  overflow-wrap: break-word;
+}
+
 /* ---- OverviewSection ---- */
 
 .overviewContainer {
